# cer-smart-meter-trials-2009-2011

./: .codacy.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  appveyor.yml  environment.yml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
cer/: clean.py
cer/electricity/: allocations.py  demand.py  survey.py
cer/electricity/residential_survey/: nomappings.txt
cer/electricity/sme_survey/: mappings.json
cer/gas/: allocation_mappings.json  allocations.py  demand.py  survey.py
cer/gas/residential_survey/: mappings.json
conda.recipe/: meta.yaml
ireland_smartmeterdata/: __main__.py  _version.py  cli.py
ireland_smartmeterdata/cer/electricity/: allocation_mappings.json  allocations.py  clean.py  demand.py  survey.py
ireland_smartmeterdata/cer/electricity/residential_survey/: nomappings.txt
ireland_smartmeterdata/cer/electricity/sme_survey/: mappings.json
ireland_smartmeterdata/cer/gas/: allocations.py  demand.py
ireland_smartmeterdata/cer/gas/residential_survey/: nomappings.txt
notebooks/: cer-electricity-demand-sandbox.ipynb  create-intake-catalogue.ipynb  sandbox.ipynb  setup.ipynb  source.yaml
notebooks/.ipynb_checkpoints/: cer-electricity-demand-sandbox-checkpoint.ipynb
notebooks/cer-electricity-demand/: calculate-residential-averages.ipynb  sandbox.ipynb
notebooks/cer-gas-demand/: sandbox.ipynb
tests/: test_cli.py
tests/cer/electricity/: test_clean.py  test_demand.py
tests/cer/gas/: test_demand.py
tests/electricity/: test_demand.py
tests/gas/: test_allocations.py  test_demand.py
