[tool.poetry]
name = "cer"
version = "0.1.0"
description = "Tidies & simplifies querying the CER Smart Meter Trials 2009-2011 datasets via prefect, dask, pandas and Google Colaboratory"
authors = ["Rowan Molony <rowan.molony@codema.ie>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
dask = {extras = ["dataframe"], version = "^2021.1.0"}
openpyxl = "^3.0.7"
xlrd = "^2.0.1"
pyarrow = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
